--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <ul class="boards" active>
           <div class="links">
             <li>
-              <h1>Fun</h1>
-              <a href="https://4chan.org/wsg/" target="_blank">/wsg/</a>
-              <a href="https://archive.arisuchan.jp/cult/catalog.html" target="_blank">/cult/</a>
-              <a href="https://4chan.org/lit/" target="_blank">/lit/</a>
-              <a href="https://4chan.org/v/" target="_blank">/v/</a>
-              <a href="https://4chan.org/a/" target="_blank">/a/</a>
+              <h1>Dashboard</h1>
+              <a href="https://perennialformulationscom.sharepoint.com/:x:/s/PerennialFormulationsLP/EVy9VXb2p8BEn9rqHObMjyMBPPP59zZ4GR40x3o9B-s_dA?e=isheJa" target="_blank">Tasks</a>
+              <a href="https://perennialformulationscom.sharepoint.com/:x:/s/PerennialFormulationsLP/EW1WGRBP6ZlJlFqZq-Ds8U0B_9GtpUQgj4005ZJf1BYAUg?e=ubYpbI" target="_blank">Operations</a>
+              <a href="https://perennialformulationscom.sharepoint.com/:x:/s/PerennialFormulationsLP/Ec7MAgNSMt5FrIs6rIJc-qgBS0tqtoaBd66eLYg-ZpGWSg?e=MBHC6v" target="_blank">Projections (P&L)</a>
+              <a href="https://perennialformulationscom.sharepoint.com/:x:/s/PerennialFormulationsLP/EeVnciF93FhMvY9kBeaNdj4BbmG_ByNG_IKkioXbkcg3kw?e=55uzrN" target="_blank">Price Points</a>
+              <a href="https://perennialformulationscom.sharepoint.com/:x:/s/PerennialFormulationsLP/EefkXx2DcbRLkrHy7FHRbogBlP9Vm5kXaJQF7DwXn72VTw?e=X9pf5D" target="_blank">Marketing</a>
             </li>
             <li>
               <h1>Comfy</h1>
