--- a/index.html
+++ b/index.html
@@ -26,16 +26,20 @@
               <a href="https://perennialformulationscom.sharepoint.com/:x:/s/PerennialFormulationsLP/EefkXx2DcbRLkrHy7FHRbogBlP9Vm5kXaJQF7DwXn72VTw?e=X9pf5D" target="_blank">Marketing</a>
             </li>
             <li>
-              <h1>Comfy</h1>
-              <a href="https://sushigirl.us/lounge/catalog.html" target="_blank">/lounge/</a>
-              <a href="https://anon.cafe/comfy/catalog.html" target="_blank">/comfy/</a>
+              <h1>Sales</h1>
+              <a href="https://sellercentral.amazon.com" target="_blank">/Amazon/a>
+              <a href="https://Rangeme.com" target="_blank">/Rangeme/</a>
+              <a href="https://Shipstation.com" target="_blank">Shipping</a>
+              <a href="https://linkedin.com" target="_blank">/Linkedin/</a>
+              <a href="https://cse.google.com/cse?cx=014394093098352383268:ckze0cnodgy" target="_blank">LinkedIn search</a>
+              <a href="https://trends.google.com/trends/?geo=US" target="_blank">Trends</a>
             </li>
             <li>
-              <h1>Technology</h1>
-              <a href="https://4chan.org/g/" target="_blank">/g/</a>
-              <a href="https://archive.arisuchan.jp/%CE%94/catalog.html" target="_blank">/Δ/</a>
-              <a href="https://www.lainchan.org/%CE%BB/catalog.html" target="_blank">/λ/</a>
-              <a href="https://www.lainchan.org/sec/catalog.html" target="_blank">/sec/</a>
+              <h1>Accounting & Inventory</h1>
+              <a href="https://pca1991.top" target="_blank">Perennial ERP</a>
+              <a href="https://Shipstation.com" target="_blank">Shipping</a>
+              <a href="https://perennialformulationscom.sharepoint.com/:x:/s/PerennialFormulationsLP/EW1WGRBP6ZlJlFqZq-Ds8U0B_9GtpUQgj4005ZJf1BYAUg?e=06cEr4" target="_blank">Inventory Input</a>
+              <a href="https://oktap.tax.ok.gov/oktap/web/_/" target="_blank">/OK tax portal</a>
               <a href="https://boards.420chan.org/prog/" target="_blank">/prog/</a>
             </li>
           </div>
